tools/LangGrammarParser.py
# Generated from LangGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LangGrammarParser ( Parser ):

    grammarFileName = "LangGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'procedure'", "';'", "':='", 
                     "':'", "','", "'var'", "'int'", "'boolean'", "'read'", 
                     "'write'", "'true'", "'false'", "'begin'", "'end'", 
                     "'if'", "'then'", "'else'", "'or'", "'and'", "'not'", 
                     "'+'", "'*'", "'/'", "'div'", "'-'", "'('", "')'", 
                     "'['", "']'", "'while'", "'do'", "'.'", "'='", "'<>'", 
                     "'<'", "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "PROCEDURE", "SEMICOLON", 
                      "ATTRIB", "COLON", "COMMA", "VAR", "TYPE_INT", "TYPE_BOOL", 
                      "PROC_READ", "PROC_WRITE", "CONST_TRUE", "CONST_FALSE", 
                      "BEGIN", "END", "IF", "THEN", "ELSE", "OR", "AND", 
                      "NOT", "SUM", "MUL", "DIV", "INT_DIV", "SUB", "LP", 
                      "RP", "LB", "RB", "WHILE", "DO", "DOT", "EQUAL", "DIFF", 
                      "LT", "GT", "LTE", "GTE", "IDENTIFICADOR", "INT", 
                      "REAL", "COMMENT", "MULTILINE_COMMENT", "WS", "INVALID_TOKEN", 
                      "INVALID" ]

    RULE_numero = 0
    RULE_relacao = 1
    RULE_termo = 2
    RULE_expressaoSimples = 3
    RULE_expressao = 4
    RULE_fator = 5
    RULE_variavel = 6
    RULE_declaracaoVariavel = 7
    RULE_listaIdentificadores = 8
    RULE_parteDeclaracaoVariavel = 9
    RULE_tipo = 10

    ruleNames =  [ "numero", "relacao", "termo", "expressaoSimples", "expressao", 
                   "fator", "variavel", "declaracaoVariavel", "listaIdentificadores", 
                   "parteDeclaracaoVariavel", "tipo" ]

    EOF = Token.EOF
    PROGRAM=1
    PROCEDURE=2
    SEMICOLON=3
    ATTRIB=4
    COLON=5
    COMMA=6
    VAR=7
    TYPE_INT=8
    TYPE_BOOL=9
    PROC_READ=10
    PROC_WRITE=11
    CONST_TRUE=12
    CONST_FALSE=13
    BEGIN=14
    END=15
    IF=16
    THEN=17
    ELSE=18
    OR=19
    AND=20
    NOT=21
    SUM=22
    MUL=23
    DIV=24
    INT_DIV=25
    SUB=26
    LP=27
    RP=28
    LB=29
    RB=30
    WHILE=31
    DO=32
    DOT=33
    EQUAL=34
    DIFF=35
    LT=36
    GT=37
    LTE=38
    GTE=39
    IDENTIFICADOR=40
    INT=41
    REAL=42
    COMMENT=43
    MULTILINE_COMMENT=44
    WS=45
    INVALID_TOKEN=46
    INVALID=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class NumeroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(LangGrammarParser.INT, 0)

        def REAL(self):
            return self.getToken(LangGrammarParser.REAL, 0)

        def getRuleIndex(self):
            return LangGrammarParser.RULE_numero

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumero" ):
                listener.enterNumero(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumero" ):
                listener.exitNumero(self)




    def numero(self):

        localctx = LangGrammarParser.NumeroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_numero)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            _la = self._input.LA(1)
            if not(_la==41 or _la==42):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelacaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(LangGrammarParser.EQUAL, 0)

        def DIFF(self):
            return self.getToken(LangGrammarParser.DIFF, 0)

        def LT(self):
            return self.getToken(LangGrammarParser.LT, 0)

        def LTE(self):
            return self.getToken(LangGrammarParser.LTE, 0)

        def GT(self):
            return self.getToken(LangGrammarParser.GT, 0)

        def GTE(self):
            return self.getToken(LangGrammarParser.GTE, 0)

        def getRuleIndex(self):
            return LangGrammarParser.RULE_relacao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelacao" ):
                listener.enterRelacao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelacao" ):
                listener.exitRelacao(self)




    def relacao(self):

        localctx = LangGrammarParser.RelacaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_relacao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1082331758592) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangGrammarParser.FatorContext)
            else:
                return self.getTypedRuleContext(LangGrammarParser.FatorContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(LangGrammarParser.MUL)
            else:
                return self.getToken(LangGrammarParser.MUL, i)

        def INT_DIV(self, i:int=None):
            if i is None:
                return self.getTokens(LangGrammarParser.INT_DIV)
            else:
                return self.getToken(LangGrammarParser.INT_DIV, i)

        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(LangGrammarParser.AND)
            else:
                return self.getToken(LangGrammarParser.AND, i)

        def getRuleIndex(self):
            return LangGrammarParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)




    def termo(self):

        localctx = LangGrammarParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_termo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.fator()
            self.state = 31
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 27
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 42991616) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 28
                    self.fator() 
                self.state = 33
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoSimplesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangGrammarParser.TermoContext)
            else:
                return self.getTypedRuleContext(LangGrammarParser.TermoContext,i)


        def SUM(self, i:int=None):
            if i is None:
                return self.getTokens(LangGrammarParser.SUM)
            else:
                return self.getToken(LangGrammarParser.SUM, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(LangGrammarParser.SUB)
            else:
                return self.getToken(LangGrammarParser.SUB, i)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(LangGrammarParser.OR)
            else:
                return self.getToken(LangGrammarParser.OR, i)

        def getRuleIndex(self):
            return LangGrammarParser.RULE_expressaoSimples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressaoSimples" ):
                listener.enterExpressaoSimples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressaoSimples" ):
                listener.exitExpressaoSimples(self)




    def expressaoSimples(self):

        localctx = LangGrammarParser.ExpressaoSimplesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expressaoSimples)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22 or _la==26:
                self.state = 34
                _la = self._input.LA(1)
                if not(_la==22 or _la==26):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 37
            self.termo()
            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 38
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 71827456) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 39
                    self.termo() 
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressaoSimples(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangGrammarParser.ExpressaoSimplesContext)
            else:
                return self.getTypedRuleContext(LangGrammarParser.ExpressaoSimplesContext,i)


        def relacao(self):
            return self.getTypedRuleContext(LangGrammarParser.RelacaoContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)




    def expressao(self):

        localctx = LangGrammarParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expressao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.expressaoSimples()
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 46
                self.relacao()
                self.state = 47
                self.expressaoSimples()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self):
            return self.getTypedRuleContext(LangGrammarParser.VariavelContext,0)


        def numero(self):
            return self.getTypedRuleContext(LangGrammarParser.NumeroContext,0)


        def LP(self):
            return self.getToken(LangGrammarParser.LP, 0)

        def expressao(self):
            return self.getTypedRuleContext(LangGrammarParser.ExpressaoContext,0)


        def RP(self):
            return self.getToken(LangGrammarParser.RP, 0)

        def NOT(self):
            return self.getToken(LangGrammarParser.NOT, 0)

        def fator(self):
            return self.getTypedRuleContext(LangGrammarParser.FatorContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_fator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFator" ):
                listener.enterFator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFator" ):
                listener.exitFator(self)




    def fator(self):

        localctx = LangGrammarParser.FatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.state = 51
                self.variavel()
                pass
            elif token in [41, 42]:
                self.state = 52
                self.numero()
                pass
            elif token in [27]:
                self.state = 53
                self.match(LangGrammarParser.LP)
                self.state = 54
                self.expressao()
                self.state = 55
                self.match(LangGrammarParser.RP)
                pass
            elif token in [21]:
                self.state = 57
                self.match(LangGrammarParser.NOT)
                self.state = 58
                self.fator()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(LangGrammarParser.IDENTIFICADOR, 0)

        def expressao(self):
            return self.getTypedRuleContext(LangGrammarParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)




    def variavel(self):

        localctx = LangGrammarParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variavel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(LangGrammarParser.IDENTIFICADOR)
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 62
                self.expressao()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoVariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(LangGrammarParser.TipoContext,0)


        def listaIdentificadores(self):
            return self.getTypedRuleContext(LangGrammarParser.ListaIdentificadoresContext,0)


        def getRuleIndex(self):
            return LangGrammarParser.RULE_declaracaoVariavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoVariavel" ):
                listener.enterDeclaracaoVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoVariavel" ):
                listener.exitDeclaracaoVariavel(self)




    def declaracaoVariavel(self):

        localctx = LangGrammarParser.DeclaracaoVariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracaoVariavel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.tipo()
            self.state = 66
            self.listaIdentificadores()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaIdentificadoresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(LangGrammarParser.IDENTIFICADOR)
            else:
                return self.getToken(LangGrammarParser.IDENTIFICADOR, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LangGrammarParser.COMMA)
            else:
                return self.getToken(LangGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return LangGrammarParser.RULE_listaIdentificadores

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaIdentificadores" ):
                listener.enterListaIdentificadores(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaIdentificadores" ):
                listener.exitListaIdentificadores(self)




    def listaIdentificadores(self):

        localctx = LangGrammarParser.ListaIdentificadoresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listaIdentificadores)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(LangGrammarParser.IDENTIFICADOR)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 69
                self.match(LangGrammarParser.COMMA)
                self.state = 70
                self.match(LangGrammarParser.IDENTIFICADOR)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParteDeclaracaoVariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoVariavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangGrammarParser.DeclaracaoVariavelContext)
            else:
                return self.getTypedRuleContext(LangGrammarParser.DeclaracaoVariavelContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(LangGrammarParser.SEMICOLON)
            else:
                return self.getToken(LangGrammarParser.SEMICOLON, i)

        def EOF(self):
            return self.getToken(LangGrammarParser.EOF, 0)

        def getRuleIndex(self):
            return LangGrammarParser.RULE_parteDeclaracaoVariavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParteDeclaracaoVariavel" ):
                listener.enterParteDeclaracaoVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParteDeclaracaoVariavel" ):
                listener.exitParteDeclaracaoVariavel(self)




    def parteDeclaracaoVariavel(self):

        localctx = LangGrammarParser.ParteDeclaracaoVariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parteDeclaracaoVariavel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.declaracaoVariavel()
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 77
                    self.match(LangGrammarParser.SEMICOLON)
                    self.state = 78
                    self.declaracaoVariavel() 
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 84
            self.match(LangGrammarParser.SEMICOLON)
            self.state = 85
            self.match(LangGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_BOOL(self):
            return self.getToken(LangGrammarParser.TYPE_BOOL, 0)

        def TYPE_INT(self):
            return self.getToken(LangGrammarParser.TYPE_INT, 0)

        def getRuleIndex(self):
            return LangGrammarParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = LangGrammarParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





